search button worked

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body class="container">
     <nav class="container navbar">
         <div>
-            <h2>Hungry Monster</h2>
+            <h2 id="homepage">Hungry Monster</h2>
         </div>
         <div>
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Service</li>
-                <li>Contact</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </div>
     </nav>
 
     <div class="submit-area">
-        <input class="form-control input-field" type="text" placeholder="Enter Your Favourite Food Name">
-        <button class="btn btn-warning another">Submit</button> 
+        <input id="input-field" class="form-control" type="text" placeholder="Enter Your Favourite Food Name">
+        <button id="submit" class="btn btn-warning">Submit</button> 
     </div>
 
     <script src="asset/js/script.js"></script>
