--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     </nav>
 
     <div class="submit-area">
-        <input id="input-field" class="form-control" type="text" placeholder="Enter Your Favourite Food Name">
-        <button id="submit" class="btn btn-warning">Submit</button> 
+        <input id="input-field" class="form-control" type="text" placeholder="enter your favourite food name">
+        <button id="search" class="btn btn-warning">Search</button> 
+    </div>
+
+    <div id="meal-area">
+        
     </div>
 
     <script src="asset/js/script.js"></script>
